examples/kafka/user_client.yaml
apiVersion: v1
kind: Pod
metadata:
  name: user-client
  namespace: kubeflow-frederik
  annotations:
    sidecar.istio.io/inject: "false"
spec:
  containers:
  - name: kafka-client
    image: confluentinc/cp-enterprise-kafka:6.1.0
    command:
      - sh
      - -c
      - "exec tail -f /dev/null"
