examples/kafka/minio3.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: minio-2
  name: minio-2
  namespace: kafka
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: minio-2
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: 'false'
      labels:
        app: minio-2
    spec:
      volumes:
        - name: minio2-pv
          persistentVolumeClaim:
            claimName: minio2-pvc

      containers:
      - args:
        - server
        - /data
        image: minio/minio:RELEASE.2020-10-18T21-54-12Z
        imagePullPolicy: IfNotPresent
        name: minio-2
        ports:
        - containerPort: 9000
          protocol: TCP
        volumeMounts:
          - mountPath: /data
            name: minio2-pv

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: minio-2
  name: minio-service-2
  namespace: kafka
spec:
  ports:
    - port: 9000
      protocol: TCP
      targetPort: 9000
      nodePort: 30900
  selector:
    app: minio-2
  type: NodePort
