examples/kafka/authorizationpolicy_allow_all.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-all
  namespace: frederik-coquelet
spec:
  action: ALLOW
  rules:
  - {}
