examples/kafka/authorizationpolicy_allow_path.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allowlist-by-paths
  namespace: default
spec:
  targetRefs:
  - name: waypoint
    kind: Gateway
    group: gateway.networking.k8s.io
  action: ALLOW
  rules:
  - to:
    - operation:
        paths:
        - /metrics   # The path to collect metrics by system pod.
        - /healthz
        - /wait-for-drain   # The path to probe by system pod.
